--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
   <div id="intro">
     <video autoplay muted playsinline id="introVideo">
-      <source src="https://files.catbox.moe/lqf8cj.mp4" type="video/mp4" />
+      <source src="https://files.catbox.moe/xu88a5.mp4" type="video/mp4" />
       Browser Anda tidak mendukung video.
     </video>
   </div>  <div id="profile">
