--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 extend: {
                     colors: {
                         neon: {
-                            blue: '#00f0ff',
+                            blue: '#ff004c',
                             purple: '#aa00ff',
                             pink: '#ff00aa',
                             green: '#00ffaa',
