--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                             blue: '#ff003c',
                             purple: '#aa00ff',
                             pink: '#ff00aa',
-                            green: '#00ffaa',
+                            green: '#00ffff',
                         }
                     },
                     boxShadow: {
