--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                     colors: {
                         neon: {
                             blue: '#ff003c',
-                            purple: '#aa00ff',
-                            pink: '#ff00aa',
+                            purple: '#00ffff',
+                            pink: '#39ff14',
                             green: '#00ffff',
                         }
                     },
