--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     <header class="relative">
         <!-- Cover Photo -->
         <div class="h-64 lg:h-96 w-full overflow-hidden">
-            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/282808de-be05-473b-a83d-4eb50af8ff31.png" alt="Futuristic cyberpunk cityscape with neon lights and digital rain effect in background" class="w-full h-full object-cover" />
+            <img src="https://files.catbox.moe/ppkffi.jpg" alt="Futuristic cyberpunk cityscape with neon lights and digital rain effect in background" class="w-full h-full object-cover" />
         </div>
         
         <!-- Profile Photo -->
         <div class="absolute -bottom-16 left-1/2 transform -translate-x-1/2 w-32 h-32 lg:w-40 lg:h-40 rounded-full border-4 border-neon-blue overflow-hidden shadow-neon">
-            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/eb93d26a-c079-41c5-8e01-9cbfef2266a6.png" alt="Professional game developer portrait wearing augmented reality glasses with colorful UI reflections on face" class="w-full h-full object-cover" />
+            <img src="https://img1.pixhost.to/images/7472/625780628_fr3hosting.jpg" alt="Professional game developer portrait wearing augmented reality glasses with colorful UI reflections on face" class="w-full h-full object-cover" />
         </div>
     </header>
 
@@ -102,8 +102,8 @@
     <main class="container mx-auto px-4 pb-20 max-w-6xl">
         <!-- About Section -->
         <section id="about" class="mb-20 pt-10">
-            <h1 class="text-3xl lg:text-5xl font-bold text-center mb-4 neon-text typewriter">JOHN DOE</h1>
-            <h2 class="text-xl lg:text-2xl text-center mb-10 text-neon-purple">GAME DEVELOPER | FULL STACK PROGRAMMER</h2>
+            <h1 class="text-3xl lg:text-5xl font-bold text-center mb-4 neon-text typewriter">RESELLER GAMING</h1>
+            <h2 class="text-xl lg:text-2xl text-center mb-10 text-neon-purple">SERVER DEVELOPER | FULL STACK PROGRAMMER</h2>
             
             <div class="bg-gray-900 bg-opacity-70 rounded-xl p-6 lg:p-8 neon-border">
                 <h3 class="text-2xl font-bold mb-4 text-neon-green">ABOUT ME</h3>
@@ -244,7 +244,7 @@
                 <a href="https://linkedin.com" class="text-neon-blue hover:text-neon-green transition-all">LinkedIn</a>
                 <a href="https://twitter.com" class="text-neon-blue hover:text-neon-green transition-all">Twitter</a>
             </div>
-            <p class="text-sm">© 2023 John Doe. All rights reserved.</p>
+            <p class="text-sm">© 2025 AHMADI. All rights reserved.</p>
         </div>
     </footer>
 
