--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
         <!-- Music Player -->
         <section class="mb-20 flex justify-center">
             <button id="musicBtn" class="relative px-8 py-3 bg-gradient-to-r from-neon-green to-neon-blue text-black font-bold rounded-full overflow-hidden transition-all hover:shadow-neon hover:scale-105 transform">
-                <span class="relative z-10">PLAY TRACK</span>
+                <span class="relative z-10">PLAY MUSIC</span>
                 <span class="absolute inset-0 bg-white opacity-0 hover:opacity-20 transition-opacity"></span>
                 <audio id="backgroundMusic" loop>
-                    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+                    <source src="https://files.catbox.moe/i3en1p.mp3" type="audio/mpeg">
                 </audio>
             </button>
         </section>
