--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             
             <div class="bg-gray-900 bg-opacity-70 rounded-xl p-6 lg:p-8 neon-border">
                 <h3 class="text-2xl font-bold mb-4 text-neon-green">ABOUT ME</h3>
-                <p class="mb-4">Passionate game developer with 7+ years of experience creating immersive gaming experiences. Specializing in Unity, Unreal Engine, and full-stack web development for game backends.</p>
+                <p class="mb-4">Passionate game developer with ±1 month of experience creating immersive gaming experiences. Specializing in Unity, Unreal Engine, and full-stack web development for game backends.</p>
                 <p>When I'm not coding, you can find me playing competitive FPS games or exploring new technologies in the gaming industry.</p>
             </div>
         </section>
