--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       height: 100%;
     }
     video {
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      transform: translate(-10%, -10%);
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain; /* <-- ini penting */
+  background-color: black; /* agar sisa layar jadi hitam */
     }
   </style>
 </head>
