--- a/home.html
+++ b/home.html
@@ -184,11 +184,11 @@
                 <!-- Project Card -->
                 <div class="bg-gray-900 bg-opacity-70 rounded-xl overflow-hidden neon-border hover:shadow-neon-purple transition-all">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/91262579-61bf-4b0f-a4d7-14f2d6ed1105.png" alt="Screenshot of space shooter game with colorful laser beams and alien spaceships" class="w-full h-full object-cover" />
+                        <img src="https://img1.pixhost.to/images/7484/625934582_fr3hosting.jpg" alt="Screenshot of space shooter game with colorful laser beams and alien spaceships" class="w-full h-full object-cover" />
                     </div>
                     <div class="p-5">
-                        <h4 class="text-xl font-bold mb-2 text-neon-blue">Galactic Warfare</h4>
-                        <p class="text-sm mb-3">A space shooter game built with Unity featuring advanced particle effects.</p>
+                        <h4 class="text-xl font-bold mb-2 text-neon-blue">WEBSITE STORE V1</h4>
+                        <p class="text-sm mb-3">This store's website has a pretty good and relevant design, features suitable for both online and offline stores, and the potential for further expansion. This website is highly recommended for a store website.</p>
                         <a href="#" class="text-neon-green text-sm hover:underline">View Project</a>
                     </div>
                 </div>
