--- a/home.html
+++ b/home.html
@@ -196,11 +196,11 @@
                 <!-- Project Card -->
                 <div class="bg-gray-900 bg-opacity-70 rounded-xl overflow-hidden neon-border hover:shadow-neon-purple transition-all">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/97fb5231-6cbb-4076-ab0d-8481aef439e9.png" alt="VR puzzle game environment with floating neon cubes and glowing pathways" class="w-full h-full object-cover" />
+                        <img src="https://img1.pixhost.to/images/7485/625940571_fr3hosting.jpg" alt="VR puzzle game environment with floating neon cubes and glowing pathways" class="w-full h-full object-cover" />
                     </div>
                     <div class="p-5">
-                        <h4 class="text-xl font-bold mb-2 text-neon-blue">Neon Puzzle VR</h4>
-                        <p class="text-sm mb-3">Virtual reality puzzle experience with Unreal Engine's physics system.</p>
+                        <h4 class="text-xl font-bold mb-2 text-neon-blue">PUZZLE QUIZ CHALLENGE</h4>
+                        <p class="text-sm mb-3">This game can test your abilities and can increase your insight, this game is recommended for school children to have fun and increase their insight.</p>
                         <a href="#" class="text-neon-green text-sm hover:underline">View Project</a>
                     </div>
                 </div>
